# cn_pii_anonymization

./: .coverage  .env  .env.example  .gitignore  Dockerfile  README.md  README_EN.md  docker-compose.yml  license  main.py  pyproject.toml
.trae/rules/: project_rules.md
.trae/skills/debugger/: SKILL.md
.trae/skills/feature_developer/: SKILL.md
SPEC/: DEV.md  PRD.md  TDD.md  issue.md  process.md
assets/: pii_app_simulation.html
examples/: call_pii_faker.py  image_anonymization.py  text_anonymization.py
scripts/: check_device.py  download_models.py  full_performance_test.py  test_ie_batch.py  test_ie_fix.py  test_ie_integration.py  test_nlp.py  test_ocr_mkldnn.py  test_performance.py
src/cn_pii_anonymization/: __init__.py
src/cn_pii_anonymization/api/: __init__.py  app.py
src/cn_pii_anonymization/api/middleware/: __init__.py  logging.py
src/cn_pii_anonymization/api/routes/: __init__.py  image.py  text.py
src/cn_pii_anonymization/api/schemas/: __init__.py  request.py  response.py
src/cn_pii_anonymization/config/: __init__.py  recognizer_config.yaml  settings.py
src/cn_pii_anonymization/core/: __init__.py  analyzer.py  anonymizer.py  image_redactor.py
src/cn_pii_anonymization/nlp/: __init__.py  ie_engine.py  nlp_engine.py
src/cn_pii_anonymization/ocr/: __init__.py  ocr_engine.py
src/cn_pii_anonymization/operators/: __init__.py  fake_operator.py  mask_operator.py  mosaic_operator.py
src/cn_pii_anonymization/processors/: __init__.py  image_processor.py  text_processor.py
src/cn_pii_anonymization/recognizers/: __init__.py  address_recognizer.py  bank_card_recognizer.py  base.py  email_recognizer.py  id_card_recognizer.py  name_recognizer.py  passport_recognizer.py  phone_recognizer.py
src/cn_pii_anonymization/utils/: __init__.py  exceptions.py  logger.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_image_api.py  test_text_pipeline.py
tests/performance/: test_performance.py
tests/unit/: __init__.py  test_engines.py  test_image_operators.py  test_ocr_engine.py  test_operators.py  test_processors.py  test_recognizers.py  test_settings.py
web_demo/: app.js  index.html
